[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {}

[project]
name = "cards.py"
dynamic = ["version"]
description = "Generate Print-and-Play cards for your board games"
readme = "README.md"
requires-python = ">=3.5"
license = "MIT"
authors = [
    {name = "Jacob Hauberg Hansen", email = "jacob.hauberg@gmail.com"}
]
urls = {Homepage = "https://github.com/jhauberg/cards.py"}
dependencies = [
    "docopt==0.6.2 ; python_version >= '3.5'",
]

[project.scripts]
cards = "cards.__main__:main"

[tool.setuptools_scm]
write_to = "cards/version.py"
version_scheme = "guess-next-dev"
