[metadata]
name = cards.py
url = https://github.com/jhauberg/cards.py
download_url = https://github.com/jhauberg/cards.py/archive/master.zip
author = Jacob Hauberg Hansen
author_email = jacob.hauberg@gmail.com
license = MIT
description = Generate Print-and-Play cards for your board games
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any

[options]
packages = cards
include_package_data = True
python_requires = >=3.5

[options.entry_points]
console_scripts =
    cards = cards.__main__:main
